--- a/next-familyguy/package.json
+++ b/next-familyguy/package.json
@@ -13,6 +13,8 @@
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.11",
     "framer-motion": "^10.12.9",
     "next": "13.4.1",
     "postcss": "8.4.23",
@@ -20,5 +22,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "typescript": "^5.1.6"
   }
 }
