--- a/next-familyguy/tsconfig.json
+++ b/next-familyguy/tsconfig.json
@@ -5,8 +5,10 @@
       "@components/*": ["./components/*"],
       "@lib/*": ["./lib/*"],
       "@utils/*": ["./utils/*"],
-      "@characterTypes/*": ["./characterTypes/*"]
+      "@characterTypes/*": ["./characterTypes/*"],
+      "@ui/*": ["./ui/*"]
     },
+    "jsxImportSource": "@emotion/react",
     "outDir": "./build",
     "target": "es2016",
     "module": "commonjs",
