--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "next": "^13.4.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "uuidv4": "^6.2.13"
   },
   "scripts": {
     "dev": "next",
