--- a/next-typescript-todo-app/tsconfig.json
+++ b/next-typescript-todo-app/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@components/*": ["./components/*"],
+      "@task-types/*": ["./task-types/*"]
+    },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
