--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -6,10 +6,12 @@
   "author": "tobias.lehwalder <tlehwalder@posteo.de>",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-redux": "^9.1.0",
     "uuidv4": "^6.2.13"
   },
   "scripts": {
@@ -20,6 +22,8 @@
   "devDependencies": {
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
+    "react-redux": "^7.0.3",
+    "redux": "^4.2.1",
     "typescript": "^3.5.3"
   }
 }
