--- a/next-typescript-todo-app/tsconfig.json
+++ b/next-typescript-todo-app/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@task-types/*": ["./task-types/*"]
+      "@tasks/*": ["app/tasks/*"],
+      "@components/*": ["app/tasks/components/*"],
+      "@task-types/*": ["app/tasks/task-types/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
