Migrate to Tailwindcss with flowbite-react

--- a/next-typescript-todo-app/tsconfig.json
+++ b/next-typescript-todo-app/tsconfig.json
@@ -28,6 +28,5 @@
     ]
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "types": ["@emotion/react/types/css-prop"]
+  "include": ["next-env.d.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
