--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
-    "next": "^13.4.10",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
@@ -24,8 +24,11 @@
   "devDependencies": {
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
     "react-redux": "^7.0.3",
     "redux": "^4.2.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^3.5.3"
   }
 }
