--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -5,10 +5,20 @@
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
@@ -19,7 +29,12 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:strict": "next lint '*/**/*.{js,jsx,ts,tsx}'",
+    "prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,scss,css,md}",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/node": "^12.6.9",
