--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
     "@reduxjs/toolkit": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
@@ -17,12 +19,16 @@
     "lint-staged": "^15.2.7",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "next-router-mock": "^0.9.13",
+    "next-test-api-route-handler": "^4.0.8",
+    "node-mocks-http": "^1.15.0",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.24.1",
     "uuidv4": "^6.2.13"
   },
   "scripts": {
@@ -39,6 +45,8 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
@@ -47,10 +55,12 @@
     "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "postcss": "^8.4.39",
     "react-redux": "^7.0.3",
     "redux": "^4.2.1",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.1.5",
     "typescript": "^3.5.3"
   }
 }
