Tasks list sorting by userId

--- a/next-typescript-todo-app/tsconfig.json
+++ b/next-typescript-todo-app/tsconfig.json
@@ -5,7 +5,8 @@
       "@app/*": ["app/*"],
       "@tasks/*": ["app/tasks/*"],
       "@components/*": ["app/tasks/components/*"],
-      "@task-types/*": ["app/tasks/task-types/*"]
+      "@task-types/*": ["app/tasks/task-types/*"],
+      "@hooks/*": ["app/hooks/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
