Home page and Layout refactor

--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
