--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "^7.24.7",
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.3",
+    "@testing-library/dom": "^10.4.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.0",
