--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.10.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
+    "mongodb": "^6.8.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-router-mock": "^0.9.13",
@@ -52,12 +53,13 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^12.6.9",
+    "@types/node": "^12.20.55",
     "@types/react": "^16.8.24",
     "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "mongoose": "^8.5.3",
     "postcss": "^8.4.39",
     "react-redux": "^7.0.3",
     "redux": "^4.2.1",
