--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -48,6 +48,9 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@apollo/client": "^3.11.4",
+    "@apollo/server": "^4.11.0",
+    "@as-integrations/next": "^3.1.0",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.4.6",
@@ -56,6 +59,8 @@
     "@types/node": "^12.20.55",
     "@types/react": "^16.8.24",
     "autoprefixer": "^10.4.19",
+    "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
