--- a/next-typescript-todo-app/package.json
+++ b/next-typescript-todo-app/package.json
@@ -27,8 +27,6 @@
     "node-mocks-http": "^1.15.0",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.24.1",
@@ -58,6 +56,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^12.20.55",
     "@types/react": "^16.8.24",
+    "apexcharts": "^3.52.0",
     "autoprefixer": "^10.4.19",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
@@ -66,6 +65,9 @@
     "jest-environment-node": "^29.7.0",
     "mongoose": "^8.5.3",
     "postcss": "^8.4.39",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.0.3",
     "redux": "^4.2.1",
     "tailwindcss": "^3.4.4",
